--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
 		"bits-ui": "^2.15.4",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.562.0",
-		"sveltekit-superforms": "^2.29.1",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2",
-		"tailwindcss": "^4.1.18",
-		"zod": "^4.3.5"
+		"tailwindcss": "^4.1.18"
 	}
 }
